move bot to module bot.js

--- a/assets/css/stylemy.css
+++ b/assets/css/stylemy.css
@@ -228,6 +228,7 @@
                 padding-right: 10px;
                 background: #fafafa;
                 border-bottom: 1px solid #b7aeb9;
+                height: 65px;
             }
             
             .title_menedger_command {
